[package]
name = "crypto-portfolio-tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.8"
tokio = { version = "1", features = ["full"]}
eyre = "0.6"
thousands = "0.2.0"
reqwest = { version = "0.12.9", features = ["json"]}
serde_json = "1.0.132"

[dev-dependencies]
rand = "0.8"
ctor = "0.1"
